--- a/TP curso/css/styles.css
+++ b/TP curso/css/styles.css
@@ -16,15 +16,15 @@ img {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 3rem;
 }
 
 h2 {
-    font-size: 3.2rem;
+    font-size: 2.4rem;
 }
 
 p {
-    font-size: 2rem;
+    font-size: 1.6rem;
 }
 
 
@@ -54,6 +54,10 @@ p {
     .segunda {
         grid-column: 1 / 3;
     }
+    h1 {
+        font-size: 2 rem;
+    }
+ 
     h2 {
         font-size: 1.5 rem;
     }
@@ -73,12 +77,16 @@ p {
         grid-column: 3 / 4;
         
     }
+    h1 {
+        font-size: 2.4 rem;
+    }
+
     h2 {
-        font-size: 2.5 rem;
+        font-size: 2 rem;
     }
     
     p {
-        font-size: 2 rem;
+        font-size: 1.5 rem;
     }
 
 }
