--- a/TP curso/css/main.css
+++ b/TP curso/css/main.css
@@ -21,6 +21,7 @@ header {
     padding: 10px;
     height: 100px;
     margin-top: 1vw;
+    /* font-size: 3vw; */
 }
 .titlecustom{
     margin: 0%;
@@ -31,6 +32,7 @@ header {
     background-color:rgb(29, 69, 102);
     color: white;
     width: 100%;
+    font-size: 3vw;
 }
 .navcustom{
     background-color: grey;
