--- a/TP curso/css/styles.css
+++ b/TP curso/css/styles.css
@@ -15,8 +15,18 @@ img {
     max-width: 100%;
 }
 
-h1 {
-    font-size: 3rem;
+header {
+    padding-block: 10px;    
+    background-color:rgb(29, 69, 102);
+    color: white;
+    width: 100%;
+    position: relative;
+    left: 0%;
+    bottom: 0%;
+    padding: 10px;
+    height: 100px;
+    margin-top: 1vw;
+    font-size: 2vw; 
 }
 
 h2 {
@@ -54,10 +64,20 @@ p {
     .segunda {
         grid-column: 1 / 3;
     }
-    h1 {
-        font-size: 2 rem;
+    header {
+        padding-block: 10px;    
+        background-color:rgb(29, 69, 102);
+        color: white;
+        width: 100%;
+        position: relative;
+        left: 0%;
+        bottom: 0%;
+        padding: 10px;
+        height: 100px;
+        margin-top: 1vw;
+        font-size: 3vw; 
     }
- 
+     
     h2 {
         font-size: 1.5 rem;
     }
@@ -77,16 +97,51 @@ p {
         grid-column: 3 / 4;
         
     }
-    h1 {
-        font-size: 2.4 rem;
+    header {
+        padding-block: 10px;    
+        background-color:rgb(29, 69, 102);
+        color: white;
+        width: 100%;
+        position: relative;
+        left: 0%;
+        bottom: 0%;
+        padding: 10px;
+        height: 100px;
+        margin-top: 1vw;
+        font-size: 3vw; 
     }
 
     h2 {
-        font-size: 2 rem;
+        font-size: 1.5 rem;
     }
     
     p {
+        font-size: 1 rem;
+    }
+
+}
+
+@media (min-width: 615px) {
+    header {
+        padding-block: 10px;    
+        background-color:rgb(29, 69, 102);
+        color: white;
+        width: 100%;
+        position: relative;
+        left: 0%;
+        bottom: 0%;
+        padding: 10px;
+        height: 100px;
+        margin-top: 1vw;
+        font-size: 2rem; 
+       }
+
+    h2 {
         font-size: 1.5 rem;
+    }
+    
+    p {
+        font-size: 1 rem;
     }
 
 }
